--- a/web/src/app/persona/preguntas/preguntas.component.html
+++ b/web/src/app/persona/preguntas/preguntas.component.html
@@ -27,13 +27,15 @@
           <div class="answer" style="margin-left: 5px">
             <br />
             <div class="row">
-              <div class="text-center fs-1 font1">
-              
-              </div>
+              <div class="text-center fs-1 font1"></div>
             </div>
             <div class="row">
-              <img src="https://avatars.githubusercontent.com/u/70767641?v=4" alt="" width="200" height="100">
-             
+              <img
+                src="https://avatars.githubusercontent.com/u/70767641?v=4"
+                alt=""
+                width="200"
+                height="100"
+              />
             </div>
           </div>
         </div>
@@ -43,30 +45,25 @@
               <small class="text-muted font1">Por: {{ question.userId }}</small>
             </p>
             <div class="row">
-
               <div class="col-6">
                 <button
-                pButton
-                pRipple
-                type="button"
-                class="p-button-raised p-button-info"
-                style="margin-bottom: 10px"
-                [routerLink]="['/question', question.id]"
+                  pButton
+                  pRipple
+                  type="button"
+                  class="p-button-raised p-button-info"
+                  style="margin-bottom: 10px"
+                  [routerLink]="['/question', question.id]"
                 >
-                {{ question.type }}
-              </button>
-              
-            </div>
-            <div class="col-6" *ngIf="question.userId == uid">
-              <div style="text-align: center;">
-                <app-edit [idanswer]="question"></app-edit>
+                  contestar Pregunta
+                </button>
+                <div>{{ question.type }}</div>
               </div>
-              
-              
-              
+              <div class="col-6" *ngIf="question.userId == uid">
+                <div style="text-align: center">
+                  <app-edit [idanswer]="question"></app-edit>
+                </div>
+              </div>
             </div>
-          </div>
-
 
             <p class="card-text font1">{{ question.question }}</p>
             <p class="card-text font1">
