Fronted - correo verificacion
Se crea la funcion verificar, para el envio del correo de verificacion al momento de crear un usuario

--- a/web/src/app/persona/registro/registro.component.html
+++ b/web/src/app/persona/registro/registro.component.html
@@ -47,7 +47,7 @@
         </span>
         <button
 
-          (click)="ingresar()"
+          (click)="crearUsuario()"
           pButton
           pRipple
           type="button"
