Frontend - Button - Google
Se agrega la opcion para iniciar sesion con google

--- a/web/src/app/persona/login/login.component.html
+++ b/web/src/app/persona/login/login.component.html
@@ -48,6 +48,15 @@
           class="p-button-outlined p-button-secondary"
           style="margin-bottom: 10px"
         ></button>
+        <button
+          (click)="ingresarGoogle()"
+          pButton
+          pRipple
+          type="button"
+          label="Google"
+          class="p-button-outlined p-button-secondary"
+          style="margin-bottom: 10px"
+        ></button>
 
         <br />
 
