--- a/web/src/app/persona/login/login.component.html
+++ b/web/src/app/persona/login/login.component.html
@@ -62,23 +62,40 @@
 
         <br />
         <p>Aun no tienes cuenta? <a href="/registro">Registrate</a></p>
+        <hr>
+        <h6>Ingresa tu correo para recuperar contraseña</h6>
+      </form>
+      <form [formGroup]="form2">
+        <div class="col-12 md:col-4">
+          <div class="p-inputgroup">
+            <span class="p-inputgroup-addon"><i class="pi pi-envelope"></i></span>
+            <input
+              formControlName="email"
+              type="text"
+              pInputText
+              placeholder="Ejemplo01@gmail.com"
+            />
+          </div>
+        </div>
+        <div class="centrar">
+          <button
+            [disabled]="form2.invalid"
+            (click)="recuperarEmail()"
+            pButton
+            pRipple
+            type="button"
+            label="Enviar"
+            class="p-button-outlined p-button-secondary"
+            style="margin-top: 30px"
+          ></button>
+        </div>
       </form>
     </div>
 
-    <div></div>
+    
   </div>
 </div>
-<div class="container2">
-  <button
-    type="button"
-    (click)="preguntasHome()"
-    pButton
-    pRipple
-    label="Preguntas"
-    class="p-button-danger mb-2">
-    <i class="pi pi-user-edit" style="margin-top: 5px"></i>
-  </button>
-</div>
+
 
 <p-dialog
   header="Recuperar Contraseña"
@@ -97,29 +114,4 @@
     animationDuration=".5s"
   ></p-progressSpinner>
   <p>Llegará un email si tu correo se encuentra registrado</p>
-  <form [formGroup]="form2">
-    <div class="col-12 md:col-4">
-      <div class="p-inputgroup">
-        <span class="p-inputgroup-addon"><i class="pi pi-envelope"></i></span>
-        <input
-          formControlName="email"
-          type="text"
-          pInputText
-          placeholder="Ejemplo01@gmail.com"
-        />
-      </div>
-    </div>
-    <div class="centrar">
-      <button
-        [disabled]="form2.invalid"
-        (click)="recuperarEmail()"
-        pButton
-        pRipple
-        type="button"
-        label="Enviar"
-        class="p-button-outlined p-button-secondary"
-        style="margin-top: 30px"
-      ></button>
-    </div>
-  </form>
 </p-dialog>
