--- a/web/src/app/paginas/edit/edit.component.html
+++ b/web/src/app/paginas/edit/edit.component.html
@@ -73,3 +73,10 @@
 >
   Edit
 </button>
+<button
+  class="btn btn-outline-primary mb-2 me-2"
+  (click)="deleteQuestion(question.id)"
+  *ngIf="authService.userData"
+>
+  Eliminar
+</button>
