--- a/web/src/app/navbar/navbar.component.html
+++ b/web/src/app/navbar/navbar.component.html
@@ -1,14 +1,30 @@
-  <nav class="navbar bg-light">
-    <div class="container-fluid">
-      <a href="/preguntas">
-          <img src="https://ik.imagekit.io/lvh0tltbeph/SofkaU/logo-sofkau_1Fn3uH-1S.png?ik-sdk-version=javascript-1.4.3&updatedAt=1645658493330" alt="" width="200" height="75">
-        </a>
-        
-        
-        
-      <button type="button" label="Iniciar Sesion" class="p-button-warning" (click)="login()">Inicia sesión</button>
-      
-
-     
+<nav class="navbar bg-light">
+  <div class="container-fluid">
+    <a href="/preguntas">
+      <img
+        src="https://ik.imagekit.io/lvh0tltbeph/SofkaU/logo-sofkau_1Fn3uH-1S.png?ik-sdk-version=javascript-1.4.3&updatedAt=1645658493330"
+        alt=""
+        width="200"
+        height="75"
+      />
+    </a>
+    <div class="botones">
+      <div class="" *ngIf="authService.userData">
+        <button
+        type="button" class="btn btn-primary"
+          (click)="logout()"
+        >
+          Cerrar session
+        </button>
+      </div>
+      <button
+      type="button"
+      label="Iniciar Sesion"
+      class="p-button-warning"
+      (click)="login()"
+    >
+      Inicia sesión
+    </button>
     </div>
-  </nav>
+  </div>
+</nav>
