Frontend - Boton Iniciar/cerrar session
Se hace correcion visual para desaparecer boton de iniciar sesion cuando se este loggeado con una cuenta y viceversa

--- a/web/src/app/navbar/navbar.component.html
+++ b/web/src/app/navbar/navbar.component.html
@@ -17,14 +17,16 @@
           Cerrar session
         </button>
       </div>
-      <button
-      type="button"
-      label="Iniciar Sesion"
-      class="p-button-warning"
-      (click)="login()"
-    >
-      Inicia sesión
-    </button>
+      <div *ngIf="!authService.userData">
+        <button
+        type="button"
+        label="Iniciar Sesion"
+        class="p-button-warning"
+        (click)="login()"
+      >
+        Inicia sesión
+      </button>
+      </div>
     </div>
   </div>
 </nav>
