--- a/web/src/app/paginas/requestion/requestion.component.html
+++ b/web/src/app/paginas/requestion/requestion.component.html
@@ -10,7 +10,9 @@
         <div class="card-body">
           <h5 class="card-text font1">Total Respuestas</h5>
         </div>
-        <div class="card-footer text-muted"></div>
+        <div class="card-footer text-muted">
+
+        </div>
       </div>
     </div>
     <div class="col-5">
