Frontend -Test- Cypress
Se implementa la libreria cypress para realizar test, se hacen pruebas al login, al home (preguntas) y a la autentificacion con google

--- a/web/src/app/persona/registro/registro.component.html
+++ b/web/src/app/persona/registro/registro.component.html
@@ -51,10 +51,9 @@
           pButton
           pRipple
           type="button"
-          label="Crear"
           class="p-button-raised p-button-success"
           style="margin-bottom: 10px"
-        ></button>
+        >Crear</button>
         <br />
       </form>
     </div>
