--- a/web/src/app/persona/login/login.component.html
+++ b/web/src/app/persona/login/login.component.html
@@ -91,10 +91,9 @@
             pButton
             pRipple
             type="button"
-            label="Enviar"
             class="p-button-outlined p-button-secondary"
             style="margin-top: 30px"
-          ></button>
+          >Enviar</button>
         </div>
       </form>
     </div>
