Frontend - Pagination Preguntas
 se logra crear la paginacion a traves de la libreria ngx pagination, de modo que en home se visualicen  por paginas de 10 preguntas.

--- a/web/src/app/navbar/navbar.component.html
+++ b/web/src/app/navbar/navbar.component.html
@@ -9,10 +9,10 @@
       />
     </a>
     <div class="botones">
-      <div class="" *ngIf="authService.userData">
+      <div *ngIf="authService.userData">
         <button
         type="button" class="btn btn-primary"
-          (click)="logout()"
+        id="btn-cerrar"
         >
           Cerrar session
         </button>
