Frontend - Estilos - Paso Pagina
Se centro El control del paginador de preguntas, se corrigio el Click de cerrar sesion

--- a/web/src/app/navbar/navbar.component.html
+++ b/web/src/app/navbar/navbar.component.html
@@ -13,6 +13,7 @@
         <button
         type="button" class="btn btn-primary"
         id="btn-cerrar"
+        (click)="logout()"
         >
           Cerrar session
         </button>
