Frontend - Componentes Pregunta Requestion Answer
se hace correcion en el componete requestion para que traiga las respuestas de la base de datos, adicional se agregar una funcionalidad para que al agregar una respuesta esta pagina sea reactiva y dicha respuesta aparezca de inmediato.

--- a/web/src/app/paginas/requestion/requestion.component.html
+++ b/web/src/app/paginas/requestion/requestion.component.html
@@ -25,7 +25,7 @@
           <p class="card-text font1">Categoria: {{ question?.category }}</p>
         </div>
         <div class="card-footer text-muted">
-          <app-answer [item]="question"></app-answer>
+          <app-answer [item]="question" (respuestaCreada)="ngOnInit()"></app-answer>
         </div>
       </div>
     </div>
